--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-  http: ^1.2.1
-  cupertino_icons: ^1.0.8
-  google_fonts: ^6.2.1
-  firebase_core: ^2.22.0
-  firebase_auth: ^4.7.1
+  http: ^1.1.0
+  google_fonts: ^6.1.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
